--- a/index.html
+++ b/index.html
@@ -84,31 +84,31 @@
             <p>United States - San Diego</p>
         </div>
         <div class="page-2">
-            <img src="Pic/678aca7db09a7456529143.png">
+            <img src="./678aca7db09a7456529143.png">
             <div class=""></div>
             <h1>The Growth Accelerator™ ✉️ hello@rejouice.com | 🔗 www.rejouice.com (Previously Oui Will)</h1>
         </div>
         <div class="page-3">
             <div class="page-3-header"><h2>See a collection of our <b>best work</b> below</h2></div>
                <div id="img-container">
-                    <div class="img-container"><img src="Pic/5c136adb012d0.jpg">          <div class="img-content"> <div class="img-content-left"> <img src="Pic/64eeac9943bad607038298.png"> <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/5e5d6d387c666125543824.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/64eeac9943bad607038298.png"> <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/5fa1ffc132880028513348.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/5fd3159d3952c353857921.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/619d43b2db97e990864625.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/64eeac9943bad607038298.png"> <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/61afacbb1329b555557898.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/64eeac9943bad607038298.png"> <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/61dda637a3add712486287.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/620424d29d169895293344.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/6254ccb3be35a636208764.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/64eeac9943bad607038298.png"> <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/634d85204dbbf674345674.png"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/64eeac9943bad607038298.png"> <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/635280ca9713c610158789.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/64f245222ce45939489193.png"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/65032d6ee584b823869068.png"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/655e9bf370b39286645360.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/66aaf7d2bfa34668287381.png"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/66aaf7d2bfa34668287381.png"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/678eadd7be54a891207847.png"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
-                    <div class="img-container"><img src="Pic/634d85204dbbf674345674.png"> <div class="img-content"> <div class="img-content-left"> <img src="Pic/64eeac9943bad607038298.png"> <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./5c136adb012d0.jpg">          <div class="img-content"> <div class="img-content-left"> <img src="./64eeac9943bad607038298.png"> <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./5e5d6d387c666125543824.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="./64eeac9943bad607038298.png"> <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./5fa1ffc132880028513348.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./5fd3159d3952c353857921.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./619d43b2db97e990864625.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="./64eeac9943bad607038298.png"> <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./61afacbb1329b555557898.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="./64eeac9943bad607038298.png"> <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./61dda637a3add712486287.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./620424d29d169895293344.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./6254ccb3be35a636208764.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="./64eeac9943bad607038298.png"> <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./634d85204dbbf674345674.png"> <div class="img-content"> <div class="img-content-left"> <img src="./64eeac9943bad607038298.png"> <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./635280ca9713c610158789.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./64f245222ce45939489193.png"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./65032d6ee584b823869068.png"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./655e9bf370b39286645360.jpg"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./66aaf7d2bfa34668287381.png"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./66aaf7d2bfa34668287381.png"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./678eadd7be54a891207847.png"> <div class="img-content"> <div class="img-content-left"> <img src="./5a72a9db6d781.jpg">          <p>Oul Will</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
+                    <div class="img-container"><img src="./634d85204dbbf674345674.png"> <div class="img-content"> <div class="img-content-left"> <img src="./64eeac9943bad607038298.png"> <p>REJOUICE</p> <h6>Pro</h6> </div> <div class="img-content-right"><span id="img-content-right-1">DOV</span><span id="img-content-right-2">STOP</span> </div> </div></div>
                 </div>
         </div>
         <div class="page-4">
@@ -116,7 +116,7 @@
             <h1>Intrepid</h1>
             <h3>Intrepid provides software, hardware and processes that...</h3>
             <div class="page-4-img-container">
-                <img src="Pic/66aaf7d2bfa34668287381.png">
+                <img src="./66aaf7d2bfa34668287381.png">
                 <div class="page-4-img-content">
                     <div class="page-4-img-content-left"> <p>WEBSITE</p> <h2>Intrepid</h2></div>
                     <span><i class="ri-arrow-right-up-line"></i><i class="ri-save-line"></i></span>
@@ -131,14 +131,14 @@
               <h1>Latest submissions <br> on awwwards</h1>
                 <div class="page-5-img-container">
                     <div class="page-5-img-container-left-container">
-                        <img src="Pic/678eadd7be54a891207847.png">
+                        <img src="./678eadd7be54a891207847.png">
                         <div class="page-5-img-container-left-container-center">
                           <div class="page-5-img-content-left"> <p>WEBSITE</p> <h2>Intrepid</h2></div>
                           <span><i class="ri-arrow-right-up-line"></i><i class="ri-save-line"></i></span>
                         </div>
                     </div>
                     <div class="page-5-img-container-right-container">
-                       <img src="Pic/66aaf7d2bfa34668287381.png">
+                       <img src="./66aaf7d2bfa34668287381.png">
                          <div class="page-5-img-container-left-container-center">
                             <div class="page-5-img-content-left"> <p>WEBSITE</p> <h2>Intrepid</h2></div>
                             <span><i class="ri-arrow-right-up-line"></i><i class="ri-save-line"></i></span>
