--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <span><i class="ri-arrow-right-up-line"></i><i class="ri-save-line"></i></span>
                 </div>
             </div>
-            <div class="page-4-center"> <img src="Pic/64eeac9943bad607038298.png"><h2>REJOUICE®</h2><h5>Pro</h5></div>
+            <div class="page-4-center"> <img src="./64eeac9943bad607038298.png"><h2>REJOUICE®</h2><h5>Pro</h5></div>
             <button>khow More About this SOTP</button>
         </div>
         <div class="page-5">
